fixed spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -461,7 +461,7 @@ select:hover {
   font-family: "Bambino New";
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 22px;
   color: #a6b3c1;
 }
@@ -510,7 +510,7 @@ select:hover {
 /* Navigation menu */
 .nav-menu {
   width: 210px;
-  height: 272px;
+  height: 245px;
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -527,7 +527,7 @@ select:hover {
   justify-content: center;
   border-bottom: 0.1px solid #1e3a5f42;
   gap: 0.6rem;
-  padding: 0.85rem;
+  padding: 0.65rem;
   cursor: pointer;
   width: 100%;
 }
@@ -549,7 +549,7 @@ select:hover {
 /* Trending topics */
 .trending {
   width: 210px;
-  height: 380px;
+  height: 348px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -565,7 +565,7 @@ select:hover {
   align-items: center;
   justify-content: space-between;
   width: 173px;
-  height: 42px;
+  height: 37px;
   background: #f1f1f1;
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.01);
   border-radius: 8px;
